fix .timelane z-index CSS property

--- a/src/components/Timelane/Timelane.scss
+++ b/src/components/Timelane/Timelane.scss
@@ -15,6 +15,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  z-index: 0;
 
   .timelane-header {
     width: fit-content;
